--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <h2>For all your incorporated company needs</h2>
 
     <!-- Create an iframe tag-->
-
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d380513.7158805252!2d-88.0121404894073!3d41.8333925226979!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880e2c3cd0f4cbed%3A0xafe0a6ad09c0c000!2sChicago%2C%20IL!5e0!3m2!1sen!2sus!4v1652497892870!5m2!1sen!2sus" frameborder=1 width="100%" height="400px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   </body>
 </html>
